--- a/kube-logging/cluster-bootstrap/ansible/k3s/roles/k3s/master/templates/k3s.service.j2
+++ b/kube-logging/cluster-bootstrap/ansible/k3s/roles/k3s/master/templates/k3s.service.j2
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 ExecStartPre=-/sbin/modprobe br_netfilter
 ExecStartPre=-/sbin/modprobe overlay
-ExecStart=/usr/local/bin/k3s server
+ExecStart=/usr/local/bin/k3s server --kubelet-arg="read-only-port=10255"
 KillMode=process
 Delegate=yes
 LimitNOFILE=infinity
